// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders alert inbox when there are unread notifications 1`] = `
<span
  className="nav-link"
>
  <i
    className="fa fa-inbox"
    style={
      Object {
        "fontSize": "1.5rem",
      }
    }
  >
    <span
      style={
        Object {
          "backgroundColor": "darkred",
          "borderRadius": "100%",
          "color": "white",
          "fontFamily": "Arial",
          "fontSize": "0.8rem",
          "fontWeight": "bold",
          "margin": "-5px 0px 0px -12px",
          "padding": "3px",
          "position": "absolute",
        }
      }
    >
      34
    </span>
  </i>
</span>
`;

exports[`Notification renders plain inbox when no unread notifications 1`] = `
<span
  className="nav-link"
>
  <i
    className="fa fa-inbox"
    style={
      Object {
        "fontSize": "1.5rem",
      }
    }
  />
</span>
`;
